# examples

./: .gitignore  README.md  examples.json
chess-puzzle/contracts/: .example.env  .gitignore  README copy.md  foundry copy.toml
chess-puzzle/contracts/deploy/: 00_deploy_contracts.ts
chess-puzzle/contracts/script/: CreatePuzzles.s.sol  Deploy.s.sol
chess-puzzle/contracts/script/generate_puzzles/: generate_puzzles.mjs  package-lock.json  package.json
chess-puzzle/contracts/src/: ChessPuzzle.sol  FluentEloToken.sol
chess-puzzle/contracts/src/checkmate-validator/: Cargo.toml
chess-puzzle/contracts/src/checkmate-validator/src/: lib.rs
chess-puzzle/frontend/: .eslintrc.json  .gitignore  README.md  index.html  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo
chess-puzzle/frontend/public/: index.html  manifest.json
chess-puzzle/frontend/src/: main.tsx
chess-puzzle/frontend/src/app/: global.css  index.tsx
chess-puzzle/frontend/src/app/providers/: index.ts  with-mui.tsx  with-query.tsx  with-router.tsx  with-wagmi.tsx
chess-puzzle/frontend/src/components/Header/: index.tsx
chess-puzzle/frontend/src/components/Layout/: index.tsx
chess-puzzle/frontend/src/features/account/: index.ts
chess-puzzle/frontend/src/features/chessboard/: index.ts
chess-puzzle/frontend/src/pages/: index.tsx
chess-puzzle/frontend/src/pages/chessboard/: index.ts
counter/: .gitignore
counter/src/power-calculator/: Cargo.toml
erc20-rs/: .gitignore  README.md  foundry.toml
erc20-rs/src/erc20/: Cargo.toml
erc20-rs/src/erc20/src/: lib.rs
tiles/contracts/: .example.env  .gitignore  README.md  foundry.toml
tiles/contracts/script/: Deploy.s.sol  FundGame.s.sol
tiles/contracts/src/: TilesGame.sol  TilesToken.sol
tiles/contracts/src/validator/: Cargo.toml
tiles/contracts/src/validator/src/: direction.rs  game.rs  grid.rs  lib.rs  prng.rs
tiles/contracts/test/TilesGame/: Base.t.sol  Initialization.t.sol  PlayGame.t.sol
tiles/frontend/: .eslintrc.json  .gitignore  README.md  components.json  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
tiles/frontend/public/: index.html  manifest.json
tiles/frontend/src/: main.tsx  vite-env.d.ts
tiles/frontend/src/pages/: index.tsx
(+49 files in other folders)
