[package]
name = "erc20"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = {git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.4.10-dev", default-features = false }
alloy-sol-types = { version = "1.2.0", default-features = false, features = ["json"] }
hex-literal = { version = "0.4.1", default-features = false }

[dev-dependencies]
fluentbase-testing = {git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.4.10-dev"  }
serial_test = "3.0.0"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
