[package]
edition = "2021"
name = "checkmate-validator"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
fluentbase-sdk = {git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.4.11-dev", default-features = false}
revm-rwasm-primitives = {version = "=20.0.0", default-features = false}
shakmaty = {git = "https://github.com/niklasf/shakmaty", default-features = false, features = ["alloc"]}

[dev-dependencies]
alloy-sol-types = {version = "0.8.5", default-features = false}
fluentbase-testing = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.4.11-dev" }
hex = "0.4.3"

[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
wasm = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
