[package]
name = "validator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.4.11-dev", default-features = false }
revm-rwasm-primitives = { version = "=20.0.0", default-features = false }
alloy-sol-types = { version = "0.8.5", default-features = false }

[dev-dependencies]
fluentbase-testing = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.4.11-dev" }
hex-literal = "0.4.1"
hex = "0.4.3"

[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
wasm = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
